Introductie van PortefeuilleTrayIcon class